--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,20 @@ name = "aoc2022"
 version = "0.1.0"
 edition = "2021"
 
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 ureq = "2.3.1"
 
+[dev-dependencies]
+criterion = "0.4.0"
+
 [profile.release]
 lto = true
 codegen-units = 1
+
+[[bench]]
+name = "all_days"
+path = "benchmarks/all_days.rs"
+harness = false
